--- a/FidelityBTG/FidelityBTG.csproj
+++ b/FidelityBTG/FidelityBTG.csproj
@@ -83,11 +83,10 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
 		
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\btg_logo.svg" Color="#FFFFFF" BaseSize="2560,1016" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -114,6 +113,10 @@
 	  <MauiXaml Update="MVVM\Views\UpdateClientPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
 </Project>
